--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -47,6 +47,40 @@ layout: default
             {%- include news.html limit=true %}
           {%- endif %}
 
+          <!-- CV -->
+          <br><br>
+          <h2><a href="#" style="color: inherit;">Career and Academic Journey</a></h2>
+          <article>
+            <div class="cv">
+              {% for data in site.data.resume %}
+                {% if site.jsonresume and site.jsonresume.size > 0 %}
+                  {% unless site.jsonresume contains data[0] %}
+                    {% continue %}
+                  {% endunless %}
+                {% endif %}
+                {% if data[0] == "meta" or data[1].size == 0 %}
+                  {% continue %}
+                {% endif %}
+                <a class="anchor" id="{{ data[0] }}"></a>
+                <div class="card mt-3 p-3">
+                  <h3 class="card-title font-weight-medium">{{ data[0] | capitalize }}</h3>
+                  <div>
+                  {% case data[0] %}
+                    {% when "education" %}
+                      {% include resume/education.html %}
+                    {% when "work" %}
+                      {% include resume/work.html %}
+                    {% when "certificates" %}
+                      {% include resume/certificates.html %}
+                    {% else %}
+        
+                  {% endcase %}
+                  </div>
+                </div>
+              {% endfor %}
+              </div>
+          </article>
+
           <!-- Latest posts -->
           {% if page.latest_posts -%}
             <h2><a href="{{ '/blog/' | relative_url }}" style="color: inherit;">latest posts</a></h2>
