--- a/_layouts/cv.html
+++ b/_layouts/cv.html
@@ -79,8 +79,8 @@ layout: default
               {% include resume/publications.html %}
             {% when "languages" %}
               {% include resume/languages.html %}
-            {% when "interests" %}
-              {% include resume/interests.html %}
+            {% when "others" %}
+              {% include resume/others.html %}
             {% when "certificates" %}
               {% include resume/certificates.html %}
             {% else %}
