--- a/_layouts/contact.html
+++ b/_layouts/contact.html
@@ -34,7 +34,7 @@ layout: default
     <h2><a href="#" style="color: inherit;">Get in Touch</a></h2>
     <iframe id="contact-form"
         src="https://docs.google.com/forms/d/e/1FAIpQLSds5dMvJMURcvCh0YTj_3uuNyiic1KN-Uw1uGjOx_dYN46WcA/viewform?embedded=true"
-        width="640" height="1017" frameborder="0" marginheight="0" marginwidth="0">Chargement…</iframe>
+        width="100%" height="1017" frameborder="0" marginheight="0" marginwidth="0">Chargement…</iframe>
 </body>
 
 </html>
