--- a/_includes/scripts/analytics.html
+++ b/_includes/scripts/analytics.html
@@ -1,13 +1,12 @@
 {%- if site.enable_google_analytics -%}
   <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-QJB042V4LQ"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-QJB042V4LQ');
-</script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id={{ site.google_analytics }}"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){ window.dataLayer.push(arguments); }
+    gtag('js', new Date());
+    gtag('config', '{{ site.google_analytics }}');
+  </script>
 {%- endif -%}
 {%- if site.enable_cronitor_analytics -%}
   <!-- Cronitor RUM -->
